# nginx-healthchecker

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  rustfmt.toml
src/: configuration.rs  http_client.rs  main.rs  serde.rs  state.rs  url.rs  writer.rs
src/service/: configuration.rs  instance.rs  mod.rs
src/services/: generic_200_ok.rs  mod.rs
src/services/node/: mod.rs  status_response.rs
