[package]
name = "nginx-healthchecker"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[lints.clippy]
incompatible_msrv = "forbid"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive", "unicode"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
reqwest = { version = "0.12.8", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "http2", "json", "macos-system-configuration", "rustls-tls-webpki-roots", "zstd"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tracing = { version = "0.1.40", features = ["max_level_debug", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
url = { version = "2.5.2", features = ["serde"] }

[profile.dev.build-override]
codegen-units = 1
overflow-checks = true

[profile.release]
codegen-units = 1
lto = true
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
overflow-checks = true
